syntax = "proto3";

import "type.proto";
package IntelliSwing;

message DeviceInfo
{
	string	deviceVer	= 1;
	string	fpgaVer		= 2;
	string	softwareVer	= 3;
	string	serialNumber = 4;
	string  sensorName	= 5;
	int32	handType	= 6; //{0 : right-hand, 1 : left_hand}
}


message StatisticsRequest
{
	int32 type = 1;
}


message SiteCalibrationRequest
{
	int32 type = 1;
}

message CameraImageRequest
{
	int32 camId = 1;
	float exposure = 2; // ms 
	float gain = 3;
}

message DebugImageRequest
{
	repeated int32  channel = 1;
	string key				= 2;
}


message DeviceStatus
{
	repeated ReturnMsg sensorState = 1;
	ReturnMsg systemState			 = 2;
	float deviceTemperature = 5;
	float batteryInfo = 6;
}

message LogRequest
{
	int32 systemRange = 1;
	int32 processingLogrange = 2;
}

message LogMessage
{
	repeated string systemLog		= 1;
	repeated string processingLog	= 2;
}

message SensorStatistics
{
	uint64 total_shot_count		= 1;
	uint64 total_trigger_count	= 2;
	uint64 total_missing_count	= 3;

	uint64 shot_count			= 4;
	uint64 trigger_count		= 5;
	uint64 missing_count		= 6;

}

message SiteCalibrationResult
{
	ReturnMsg state = 1;
}

message UpdateFirmwareRequest
{
	bytes sensorFirmware= 1;
	bytes fpgaFirmware	= 2;
}

message UpdateFirmwareResult
{
	ReturnMsg FpgaState	= 1;
	ReturnMsg SensorSW	= 2;
}

message TimeRequest
{
	int32 year = 1;
	int32 month = 2;
	int32 day = 3;
	int32 hour = 4;
	int32 min = 5;
	int32 sec = 6;
	int32 msec = 7;

}